# MFBR

./: .gitignore  LICENSE  README.md
MFBR-BTP/: .gitignore  CMakeLists.txt  Makefile  expIPBaselineClearComp.cpp  expIPBaselineEncComp.cpp  expIPBoddetiClearComp.cpp  expIPBoddetiEncComp.cpp  expMFIPClearComp.cpp  expMFIPEncComp.cpp  expMFSEDClearComp.cpp  expSEDBaselineClearComp.cpp  serialProbeAndTemplateBaseline.cpp  serialProbeMFBR.cpp  serialTemplateMFBR.cpp
MFBR-BTP/include/: mfbr.hpp
MFBR-BTP/lookupTables/: Borders_nB_3_dimF_512.txt  MFIP_nB_3_dQ_0.001_dimF_512.txt  MFSED_nB_3_dQ_0.001_dimF_512.txt
MFBR-BTP/src/: mfbr.cpp
MFIP-MFSED-Tables/: .gitignore  compIPvsMFIP.py  compSEDvsMFSED.py  genBordersMFIPandMFSED.py  genSynVectors.py  mfbrTabs.py  testFacialFeatures.py  utils.py
